prevent viewport bleeding

--- a/whackamole/style.css
+++ b/whackamole/style.css
@@ -11,7 +11,7 @@ body {
 #main {
 	border: 1px solid black;
 	width: 90%;
-	height: 90%;
+	height: 95%;
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
